# info2602mockLE

./: .gitpod.Dockerfile  .gitpod.yml  api-report.txt  globals.json  initDB.py  main.py  mock_collection.json  models.py  package-lock.json  package.json  pyproject.toml  readme.md  report.txt  requirements.txt  test.db  test.js
.theia/: settings.json
static/: app.html  index.html
templates/: edit.html  index.html
